# workbase-scheduler

./: .gitignore  README.md
api/: Cargo.toml
api/src/: app.rs  appstate.rs  lib.rs  main.rs
api/src/models/: README.md  mod.rs  org_job.rs  org_jobs.rs  org_member.rs  org_member_jobs.rs  org_members.rs  organization.rs  organizations.rs  result.rs  user.rs  users.rs
api/src/models/company/: company_employee.rs  company_location.rs  company_onboarding_invite.rs  department_role.rs  location_department.rs  location_holiday_setting.rs  location_operation_hour.rs  location_shift_feedback.rs  mod.rs
api/src/models/schedule/: availability.rs  availability_detail.rs  mod.rs  open_shift.rs  request_status.rs  shift.rs  shift_cover.rs  shift_pickup.rs  shift_trade.rs  timeoff_request.rs  work_schedule.rs
api/src/prototypes/: basic_queries.rs  create_table.rs  mod.rs  uniqueid_routers.rs
api/src/queries/: mod.rs  org_job.rs  org_jobs.rs  org_member.rs  org_member_jobs.rs  org_members.rs  organization.rs  organizations.rs  user.rs  users.rs
api/src/queries/company/: company_employee.rs  company_location.rs  company_onboarding_invite.rs  department_role.rs  location_department.rs  mod.rs
api/src/queries/schedule/: availability.rs  availability_detail.rs  mod.rs  open_shift.rs  shift.rs  shift_cover.rs  shift_pickup.rs  shift_trade.rs  timeoff_request.rs  work_schedule.rs
api/src/router/: mod.rs  router.rs  tests.rs
api/src/snowflake/: mod.rs
api/src/tests/: mod.rs
api/src/utilities/: app_error.rs  app_result.rs  mod.rs  parse_chrono.rs
(+4 files in other folders)
