[package]
name = "api"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dotenv = "0.15.0"
tokio = { version = "1.35.0", features = ["macros", "rt-multi-thread"] }
# common
serde = { version = "1.0.193", features = ["derive"] }
serde_json = "1.0.108"
chrono = { version = "0.4.31", features = ["serde"] }
reqwest = { version = "0.11.22", features = ["json"] }
# database
mysql = "24.0.0"
bcrypt = "0.15.0"

# api
axum = { version = "0.7.2", features = ["macros"] }
async-trait = "0.1.77"
tower = "0.4.13"
hyper = "1.1.0"
